--- a/Company.Web/Views/Department/Index.cshtml
+++ b/Company.Web/Views/Department/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "index";
 }
+<a asp-controller="Department" asp-action="Create" class="btn btn-primary">Create New Deprtment</a>
 @if(Model.Count()>0)
 {
     <table class=" table table-striped table-hover">
@@ -33,17 +34,17 @@
                         @department.CreateAt
                     </td>
                     <td>
-                        <a asp-action="Details" asp-route-id="department.Id" class="btn btn-warning">
+                        <a asp-action="Details" asp-route-id="@department.id" class="btn btn-warning">
                             <i class="fas fa-eye"></i>Details
                         </a>
                     </td>
                     <td>
-                        <a asp-action="Update" asp-route-id="department.Id" class="btn btn-success">
+                        <a asp-action="Update" asp-route-id="@department.id" class="btn btn-success">
                             <i class="fas fa-edit"></i>Update
                         </a>
                     </td>
                     <td>
-                        <a asp-action="Delete" asp-route-id="department.Id" class="btn btn-danger">
+                        <a asp-action="Delete" asp-route-id="@department.id" class="btn btn-danger">
                             <i class="fas fa-trash"></i>Delete
                         </a>
                     </td>
