--- a/Company.Web/Views/Department/Create.cshtml
+++ b/Company.Web/Views/Department/Create.cshtml
@@ -1,7 +1,5 @@
-﻿@model Department
-@@{
-    ViewData["Title"] = "Create";
-}
+﻿@model DepartmentDto
+
 <h1>Create New Department</h1>
 <br/>
 <br/>
