--- a/Company.Web/Views/Department/Details.cshtml
+++ b/Company.Web/Views/Department/Details.cshtml
@@ -1,11 +1,11 @@
-﻿@model Department
+﻿@model DepartmentDto
 @@{
 
 }
 <h1>Department Details</h1>
 <br/>
 <br/>
-<form asp-action="Edit" asp-route-id="@Model.id">
+<form asp-action="Edit" asp-route-id="@Model.Id">
 
    
         <div class="form-group">
