--- a/Company.Web/Views/Department/Index.cshtml
+++ b/Company.Web/Views/Department/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Department>
+﻿@model IEnumerable<DepartmentDto>
 @{
     ViewData["Title"] = "index";
 }
@@ -33,22 +33,8 @@
                     <td>
                         @department.CreateAt
                     </td>
-                    <td>
-                        <a asp-action="Details" asp-route-id="@department.id" class="btn btn-warning">
-                            <i class="fas fa-eye"></i>Details
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-action="Update" asp-route-id="@department.id" class="btn btn-success">
-                            <i class="fas fa-edit"></i>Update
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-action="Delete" asp-route-id="@department.id" class="btn btn-danger">
-                            <i class="fas fa-trash"></i>Delete
-                        </a>
-                    </td>
-                </tr>
+                    <partial name="_ActionButtonsPartialView" model="@department.Id.ToString()" />
+                                  </tr>
             }
         </tbody>
     </table>
