--- a/Company.Web/Views/_ViewImports.cshtml
+++ b/Company.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Company.Web
 @using Company.Web.Models
 @using Company.Data.Models
+@using Company.Service.Interfaces.Department.DTO
+@using Company.Service.Interfaces.Employee.DTO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
