--- a/Company.Web/Views/Account/SignUp.cshtml
+++ b/Company.Web/Views/Account/SignUp.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model SignUpViewModel
 @{
     ViewData["Title"] = "SignUp";
     Layout = "~/Views/Shared/_AuthLayout.cshtml";
@@ -6,42 +6,46 @@
 
 <h1>SignUp</h1>
 	
-<form class="login100-form validate-form">
-	<span class="login100-form-logo">
-		<i class="zmdi zmdi-landscape"></i>
-	</span>
+<form asp-action="SignUp" method="post">
+    <div class="form-group">
+        <label asp-for="FirstName"></label>
+        <input asp-for="FirstName" class="form-control" placeholder="Enter your username" required />
+        <span asp-validation-for="FirstName" class="text-danger"></span>
+    </div>
+    
+    <div class="form-group">
+        <label asp-for="LastName"></label>
+        <input asp-for="LastName" class="form-control" placeholder="Enter your username" required />
+        <span asp-validation-for="LastName" class="text-danger"></span>
+    </div>
 
-	<span class="login100-form-title p-b-34 p-t-27">
-		Log in
-	</span>
 
-	<div class="wrap-input100 validate-input" data-validate="Enter username">
-		<input class="input100" type="text" name="username" placeholder="Username">
-		<span class="focus-input100" data-placeholder="&#xf207;"></span>
-	</div>
+    <div class="form-group">
+        <label asp-for="Email"></label>
+        <input asp-for="Email" class="form-control" placeholder="Enter your email" required />
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
 
-	<div class="wrap-input100 validate-input" data-validate="Enter password">
-		<input class="input100" type="password" name="pass" placeholder="Password">
-		<span class="focus-input100" data-placeholder="&#xf191;"></span>
-	</div>
+    <div class="form-group">
+        <label asp-for="Password"></label>
+        <input asp-for="Password" class="form-control" type="password" placeholder="Enter your password" required />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
 
-	<div class="contact100-form-checkbox">
-		<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-		<label class="label-checkbox100" for="ckb1">
-			Remember me
-		</label>
-	</div>
+    <div class="form-group">
+        <label asp-for="ConfirmPassword"></label>
+        <input asp-for="ConfirmPassword" class="form-control" type="password" placeholder="Confirm your password" required />
+        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+    </div>
+    <br/>
+    <div class="wthree-text">
+        <label class="animated">
+            <input type="checkbox" required />
+            <span> I Agree terms</span>
+        </label>
 
-	<div class="container-login100-form-btn">
-		<button class="login100-form-btn">
-			Login
-		</button>
-	</div>
+</div>
 
-	<div class="text-center p-t-90">
-		<a class="txt1" href="#">
-			Forgot Password?
-		</a>
-	</div>
+    <button type="submit" value="SignUp" class="btn btn-primary">Register</button>
 </form>
-
+<p class="text-white">Do you have an Account? <a asp-action="Login" class="text-primary">Login Now!</a></p>
