--- a/Company.Web/Views/User/Index.cshtml
+++ b/Company.Web/Views/User/Index.cshtml
@@ -1,39 +1,40 @@
-﻿@model IEnumerable<IdentityRole>
+﻿@using Company.Data.Enitity
+@model IEnumerable<ApplicationUser>
 @{
     ViewData["Title"] = "index";
 }
-<a asp-controller="Department" asp-action="Create" class="btn btn-primary">Create New Deprtment</a>
+<a asp-controller="User" asp-action="Create" class="btn btn-primary">Create New User</a>
 @if (Model.Count() > 0)
 {
     <table class=" table table-striped table-hover">
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(D => D.Code)
+                    @Html.DisplayNameFor(D => D.Id)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(D => D.Name)
+                    @Html.DisplayNameFor(D => D.UserName)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(D => D.CreateAt)
+                    @Html.DisplayNameFor(D => D.Email)
                 </th>
 
             </tr>
         </thead>
         <tbody>
-            @foreach (var department in Model)
+            @foreach (var user in Model)
             {
                 <tr>
                     <td>
-                        @department.Code
+                        @user.Id
                     </td>
                     <td>
-                        @department.Name
+                        @user.UserName
                     </td>
                     <td>
-                        @department.CreateAt
+                        @user.Email
                     </td>
-                    <partial name="_ActionButtonsPartialView" model="@department.Id.ToString()" />
+                    <partial name="_ActionButtonsPartialView" model="@user.Id.ToString()" />
                 </tr>
             }
         </tbody>
@@ -42,6 +43,6 @@
 else
 {
     <div class="mt-5 alert-warning">
-        <h3>there is no Department</h3>
+        <h3>there is no Users</h3>
     </div>
 }
