--- a/Company.Web/Views/_ViewImports.cshtml
+++ b/Company.Web/Views/_ViewImports.cshtml
@@ -3,5 +3,7 @@
 @using Company.Data.Models
 @using Company.Service.Interfaces.Department.DTO
 @using Company.Service.Interfaces.Employee.DTO
+@using Microsoft.AspNetCore.Identity
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
